--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -48,9 +48,7 @@
                 </div>
                 {{!-- result col --}}
                 <div class="col-sm-6">
-                    <div class="card" "card-search">
-                        <div class="infoStats">
-                        </div>
+                    <div class="infoStats">
                     </div>
                 </div>
 
@@ -118,7 +116,7 @@
                 </div>
                 {{!-- news col --}}
                 <div class="col-sm-6">
-                    <div class="card"  id="card-title">
+                    <div class="card" id="card-title">
                         <div class="card-body">
                             <div class="row no-gutters">
                                 <div class="col">
@@ -144,7 +142,9 @@
                                                 https://www.buzzfeednews.com/article/otilliasteadman/coronavirus-opioids-overdoses</small>
                                         </p>
                                     </div>
-                                    <img id="od" src="https://img.medscape.com/thumbnail_library/shs_181217_teen_pills_overdose_suicide_800x450.jpg" alt="hand with pills">
+                                    <img id="od"
+                                        src="https://img.medscape.com/thumbnail_library/shs_181217_teen_pills_overdose_suicide_800x450.jpg"
+                                        alt="hand with pills">
                                 </div>
                             </div>
                         </div>
@@ -156,16 +156,29 @@
         <div class="col-sm-3">
             {{!-- police info --}}
             <div class="card">
-            <div class="card-body">
-            <h4>Local Police Departments Near Your Location</h4>
-            <br>
-            <p>Help better your neighborhood by making it Drug Free.
-                If you see any suspicious activity, Report it!
-            </p>
-            </div>
+                <div class="card-body">
+                    <h4>Local Police Departments Near Your Location</h4>
+                    <br>
+                    <p>Help better your neighborhood by making it Drug Free.
+                        If you see any suspicious activity, Report it!
+                    </p>
+                </div>
             </div>
             <div id="police"></div>
         </div>
     </div>
+
 </div>
+<!-- Footer -->
+<footer class="page-footer">
+    <div class="footer-copyright text-center py-3">© 2020 Copyright: infODose
+        <br>
+        <a href="https://lit-crag-01772.herokuapp.com/"> lit-crag-01772.herokuapp.com/</a>
+        <img src="/images/darelogo.png" alt="" height="12" width="35">
+        <img src="/images/dealogo.png" alt="" height="12" width="35">
+        <img src="/images/hidtalogo.png" alt="" height="12" width="35">
+        <img src="/images/naddilogo.png" alt="" height="12" width="35">
+        <img src="/images/cimelinelogo.png" alt="" height="12" width="35">
+    </div>
+</footer>
 <script type="text/javascript" src="/js/index.js"></script>
