--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -36,5 +36,17 @@
 <div class="fullReports">
 
 </div>
+  <!-- Footer -->
+    <footer class="page-footer">
+        <div class="footer-copyright text-center py-3">© 2020 Copyright: infODose
+            <br>
+            <a href="https://lit-crag-01772.herokuapp.com/"> lit-crag-01772.herokuapp.com/</a>
+            <img src="/images/darelogo.png" alt="" height="12" width="35">
+            <img src="/images/dealogo.png" alt="" height="12" width="35">
+            <img src="/images/hidtalogo.png" alt="" height="12" width="35">
+            <img src="/images/naddilogo.png" alt="" height="12" width="35">
+            <img src="/images/cimelinelogo.png" alt="" height="12" width="35">
+        </div>
+    </footer>
 
 <script type="text/javascript" src="/js/report.js"></script>
