--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -181,4 +181,4 @@
         <img src="/images/cimelinelogo.png" alt="" height="12" width="35">
     </div>
 </footer>
-<script type="text/javascript" src="/js/index.js"></script>
+<script type="text/javascript" src="/dist/index.js"></script>
