--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -51,4 +51,4 @@
         </div>
     </footer>
     
-  <script type="text/javascript" src="/js/register.js"></script>
+  <script type="text/javascript" src="/dist/register.js"></script>
