--- a/views/report.handlebars
+++ b/views/report.handlebars
@@ -49,4 +49,4 @@
         </div>
     </footer>
 
-<script type="text/javascript" src="/js/report.js"></script>
+<script type="text/javascript" src="/dist/report.js"></script>
