--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -57,4 +57,4 @@
     </footer>
 
 
-<script type="text/javascript" src="/js/login.js"></script>
+<script type="text/javascript" src="/dist/login.js"></script>
